Updated favicon + css button / Fix z-index issues in latest firefox

--- a/src/styles/02_components/builder/components/_builder_components.scss
+++ b/src/styles/02_components/builder/components/_builder_components.scss
@@ -127,8 +127,6 @@
 
 .builder--edit-modus .selected {
 
-  background-color: white;
-
   background-color:#9da5ad;
 
   background-image: linear-gradient(white 2px, transparent 2px),
@@ -137,12 +135,7 @@
   linear-gradient(90deg, rgba(255,255,255,.3) 1px, transparent 1px);
   background-size:100px 100px, 100px 100px, 20px 20px, 20px 20px;
   background-position:-2px -2px, -2px -2px, -1px -1px, -1px -1px;
-
-
   border: 1px solid $cnw_color-blueLight;
-  //padding: 0;
-  //border: 1px solid #004F94;
-  box-shadow: -1px -1px 17px 1px rgba(212, 212, 212, 1);
 
   animation: slide-in-br 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 
@@ -150,7 +143,7 @@
   box-shadow: -1px -1px 17px 1px #d4d4d4;
   top: 52px;
   left: 0;
-  z-index: 40;
+  z-index: 999;
   width: 70%;
   overflow-x: scroll;
   height: 100vh;
@@ -160,11 +153,6 @@
   .actions-bar {
     height: 42px !important;
   }
-
-  .inner-preview-wrapper {
-
-  }
-
 
   .cnw_w {
     background-color: white;
