--- a/src/styles/02_components/builder/layout/_sidebar.scss
+++ b/src/styles/02_components/builder/layout/_sidebar.scss
@@ -17,9 +17,7 @@
   -webkit-box-shadow: 22px -22px 13px 26px rgba(213, 226, 236, 0.69);
   box-shadow: 22px -22px 13px 26px rgba(213, 226, 236, 0.69);
 
-  z-index: 200;
-
-
+  z-index: 999;
 
   label {
     font-weight: 700;
